User controller and login service implemented

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ server.port=8080
 logging.level.root=INFO
 
 # Inserir dados para configuração do JDBC
+jdbc.driverClassName="teste"
+jdbc.url="teste"
+jdbc.username="teste"
+jdbc.password=""
