Creating jdbc parameters

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,21 @@
 server.port=8080
 logging.level.root=INFO
+spring.jpa.show-sql=true
+spring.datasource.testWhileIdle=true 
+spring.datasource.validationQuery=SELECT 1
+
+
 
 # Inserir dados para configuração do JDBC
-jdbc.driverClassName="teste"
-jdbc.url="teste"
-jdbc.username="teste"
-jdbc.password=""
+#jdbc.driverClassName=org.postgresql.Driver
+#jdbc.url=jdbc:postgresql://localhost:3308/
+#jdbc.username=postgres
+#jdbc.password=D@ngui20
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/barbershopDB
+spring.datasource.username=postgres
+spring.datasource.password=D@ngui20
+spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto = update
