Create initials settings

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
 			<version>42.5.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<scope>provided</scope>
+		</dependency>
 
 	</dependencies>
 
