--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.validationQuery=SELECT 1
 #jdbc.username=postgres
 #jdbc.password=D@ngui20
 
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/barbershopDB
-spring.datasource.username=postgres
-spring.datasource.password=D@ngui20
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/barbershopDB
+#spring.datasource.username=postgres
+#spring.datasource.password=D@ngui20
