--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,9 @@
 server.port=8080
 logging.level.root=INFO
 spring.jpa.show-sql=true
-spring.datasource.testWhileIdle=true 
-spring.datasource.validationQuery=SELECT 1
-
-
 
 # Inserir dados para configuração do JDBC
-#jdbc.driverClassName=org.postgresql.Driver
-#jdbc.url=jdbc:postgresql://localhost:3308/
-#jdbc.username=postgres
-#jdbc.password=D@ngui20
-
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://localhost:5432/barbershopDB
-#spring.datasource.username=postgres
-#spring.datasource.password=D@ngui20
+#jdbc.driverClassName=com.mysql.cj.jdbc.Driver
+#jdbc.url=jdbc:mysql://localhost:3307/BarbershopDB?useTimezone=true&serverTimezone=UTC
+#jdbc.username=root
+#jdbc.password=
