Create poll connection with database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,16 @@
 server.port=8080
 logging.level.root=INFO
 spring.jpa.show-sql=true
+logging.level.sql=info
+
+barbershop.database.url=jdbc:mysql://barbershopdb.mysql.uhserver.com/barbershopdb
+barbershop.database.driver=com.mysql.cj.jdbc.Driver
+barbershop.database.username=dbowner
+barbershop.database.password=Sen@c2022
+
+spring.datasource.tomcat.initial-size=10
+spring.datasource.tomcat.max-wait=30000
+spring.datasource.tomcat.max-active=15
+spring.datasource.tomcat.max-idle=10
+spring.datasource.tomcat.min-idle=4
+spring.datasource.tomcat.default-auto-commit=true
